--- a/.render.yaml
+++ b/.render.yaml
@@ -3,33 +3,14 @@ services:
     name: rimschool
     env: docker
     plan: free
-    autoDeploy: true
+    repo: https://github.com/mounaStart/RimSchool
+    buildCommand: |
+      composer install --no-dev --optimize-autoloader
+      php artisan key:generate
+      php artisan migrate --force
+    startCommand: php artisan serve --host 0.0.0.0 --port 10000
     envVars:
       - key: APP_ENV
         value: production
       - key: APP_KEY
         generateValue: true
-      - key: APP_DEBUG
-        value: false
-      - key: DB_CONNECTION
-        value: mysql
-      - key: DB_HOST
-        fromDatabase:
-          name: rimschool-db
-          property: host
-      - key: DB_PORT
-        fromDatabase:
-          name: rimschool-db
-          property: port
-      - key: DB_DATABASE
-        fromDatabase:
-          name: rimschool-db
-          property: database
-      - key: DB_USERNAME
-        fromDatabase:
-          name: rimschool-db
-          property: user
-      - key: DB_PASSWORD
-        fromDatabase:
-          name: rimschool-db
-          property: password
