--- a/.render.yaml
+++ b/.render.yaml
@@ -1,16 +1,31 @@
 services:
   - type: web
-    name: rimschool
+    name: rimschool-laravel
     env: docker
     plan: free
-    repo: https://github.com/mounaStart/RimSchool
-    buildCommand: |
-      composer install --no-dev --optimize-autoloader
-      php artisan key:generate
-      php artisan migrate --force
-  
+    branch: main
+    dockerfilePath: ./Dockerfile
+    buildCommand: ""
     envVars:
+      - key: APP_NAME
+        value: Laravel
       - key: APP_ENV
         value: production
       - key: APP_KEY
         generateValue: true
+      - key: APP_DEBUG
+        value: false
+      - key: APP_URL
+        value: https://rimschool.onrender.com
+      - key: DB_CONNECTION
+        value: mysql
+      - key: DB_HOST
+        value: ton-host-mysql
+      - key: DB_PORT
+        value: 3306
+      - key: DB_DATABASE
+        value: rimschool
+      - key: DB_USERNAME
+        value: ton-user
+      - key: DB_PASSWORD
+        value: ton-password
