--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,6 @@ services:
     branch: main
     dockerfilePath: ./Dockerfile
     buildCommand: ""
-    startCommand: "php artisan serve --host=0.0.0.0 --port=10000"
     envVars:
       - key: APP_NAME
         value: Laravel
@@ -17,34 +16,16 @@ services:
       - key: APP_DEBUG
         value: false
       - key: APP_URL
-        value: https://rimchott.onrender.com
-
+        value: https://rimschool.onrender.com
       - key: DB_CONNECTION
         value: mysql
       - key: DB_HOST
-        value: <TON_HOST_RENDER_MYSQL>
+        value: ton-host-mysql
       - key: DB_PORT
         value: 3306
       - key: DB_DATABASE
         value: rimschool
       - key: DB_USERNAME
-        value: <TON_UTILISATEUR_RENDER>
+        value: ton-user
       - key: DB_PASSWORD
-        value: <TON_MOT_DE_PASSE_RENDER>
-
-      - key: LOG_CHANNEL
-        value: stack
-      - key: LOG_LEVEL
-        value: debug
-
-      - key: SESSION_DRIVER
-        value: file
-      - key: SESSION_LIFETIME
-        value: 120
-
-      - key: CACHE_DRIVER
-        value: file
-      - key: QUEUE_CONNECTION
-        value: sync
-      - key: FILESYSTEM_DISK
-        value: local
+        value: ton-password
