--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:elckmRbec9fV/sECVJigrc4k6t/uFwn/a88CeNt9/IY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,12 +9,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=switchyard.proxy.rlwy.net
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=
-
+DB_PASSWORD=VSyMoVexWmktrpQeDmylFRvmpdccxhCr
+ 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
