--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:elckmRbec9fV/sECVJigrc4k6t/uFwn/a88CeNt9/IY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://rimschool-laravel-2g5h.onrender.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
