--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:elckmRbec9fV/sECVJigrc4k6t/uFwn/a88CeNt9/IY=
 APP_DEBUG=true
 APP_URL=https://rimschool-laravel-2g5h.onrender.com
